--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -1,9 +1,13 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 <div class="container text-center">
+<br>    
 <h1>the password is:</h1>
-
-<h2 class="alert alert-success">{{ password }}</h2>
-
-<a href="{% url 'home' %}" class="btn btn-warning">Home</a>
+<br>
+<h2 class="alert alert-dark">{{ password }}</h2>
+<br>
+<br>
+<br>
+<a href="{% url 'home' %}" class="btn btn-dark">Home</a>
+<br>
 </div>
